--- a/uin-base-setup-master/project/client/src/components/content/carouselSlider/slider.css
+++ b/uin-base-setup-master/project/client/src/components/content/carouselSlider/slider.css
@@ -1,19 +1,19 @@
 .slider {
-    border: 1px solid rgb(255, 0, 0);
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100vh;
+    /*border: 1px solid rgb(255, 0, 0);*/
+    margin: auto;
+    width: 85%;
+    height: 50vh;
     box-sizing: border-box;
     display: flex;
     align-content: center;
     overflow: hidden;
     position: relative;
-    background: black;
+    background: none;
 }
 
 .slide {
-    border: 5px solid rgb(21, 255, 0);
+    /*border: 5px solid rgb(21, 255, 0);*/
+    
     min-width: 100%;
     height: 80%;
     position: relative;
@@ -30,6 +30,7 @@
     height: 80%;
     background: none;
     border: none;
+    outline: none;
 }
 
 #goRight {
