--- a/uin-base-setup-master/project/client/src/components/content/carouselSlider/slider.css
+++ b/uin-base-setup-master/project/client/src/components/content/carouselSlider/slider.css
@@ -2,7 +2,7 @@
     /*border: 1px solid rgb(255, 0, 0);*/
     margin: auto;
     width: 85%;
-    height: 50vh;
+    height: 51vh;
     box-sizing: border-box;
     display: flex;
     align-content: center;
@@ -51,4 +51,8 @@ button {
 button:hover {
     background-color: rgb(54, 9, 9);
     color: red
+}
+
+.card-test {
+    background-color: orange;
 }
