--- a/uin-base-setup-master/project/client/src/components/content/carouselSlider/slider.css
+++ b/uin-base-setup-master/project/client/src/components/content/carouselSlider/slider.css
@@ -13,7 +13,6 @@
 
 .slide {
     /*border: 5px solid rgb(21, 255, 0);*/
-    
     min-width: 100%;
     height: 80%;
     position: relative;
@@ -45,14 +44,10 @@
 }
 
 button {
-    background-color: red;
-    color: white;
+    background-color: rgb(128, 125, 125);
+    color: rgb(41, 35, 35);
 }
 button:hover {
-    background-color: rgb(54, 9, 9);
-    color: red
-}
-
-.card-test {
-    background-color: orange;
+    background-color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
