--- a/uin-base-setup-master/project/client/src/components/content/cardComps/productcards.css
+++ b/uin-base-setup-master/project/client/src/components/content/cardComps/productcards.css
@@ -1,54 +1,32 @@
-.card-container {
-    background-color: red;
-    border: 1px solid black;
-    overflow: hidden;
-    box-shadow: 0px 0px 15px -5px;
-    display: flex;
+
+.product-card-container {
     margin: auto;
-    height: 46vh;
-    width: 25vw;
-    transition: 0.1s;
-    animation: ease-in-out;
-}
-.card-container:hover {
-    /*transform: scale(1.1);*/
-    box-shadow: 0px 0px 5px 0px rgb(255, 0, 0);
-}
-.image-container img{
-    overflow: hidden;
-    height: 300px;
-    width: 360px;
-}
-.card-content {
-    margin: 1rem;
-    margin-top: 0.5rem;
-}
-h3,p {
-    margin: 0;
-    padding: 0;
-}
-.card-title {
-    margin-bottom: 0.5rem;
-}
-.btn {
+    border: 5px solid rgb(255, 136, 0);
+    width: 30px;
+    height: 15vh;
+    padding: 20px 0;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
-.btn button {
-    padding: 0.5rem;
-    background-color: pink;
-    border: none;
-    border-radius: 10px;
-    transition: 0.2s;
-    margin-bottom: 0.5rem;
+.row {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
 }
-.btn button:hover {
-    background: green;
-    transform: scale(1.1);
+.card {
+    transition: ease all .3s;
+    width: 200px;
 }
-a {
-    text-transform: uppercase;
-    color: #000;
-    text-decoration: none;
-    font-weight: bold;
+.wrapper {
+    margin: 60px 10px 10px;
+    padding-top: 200px;
+    box-sizing: border-box;
+    position: relative;
+    box-shadow: 0 0 20 10px rgba(rgb(48, 39, 39), rgb(49, 46, 87), rgb(255, 187, 0));
+    transition: ease all .3s;
+    &:hover {
+
+    }
 }
