--- a/uin-base-setup-master/project/client/src/components/content/pageContent/grid-styling.css
+++ b/uin-base-setup-master/project/client/src/components/content/pageContent/grid-styling.css
@@ -2,8 +2,9 @@
     display: grid;
     background-color: rgb(231, 231, 231);
     height: 17vh;
-    width: 88vw;
+    width: 77vw;
     margin: auto;
+    justify-items: center;
     border: 1px solid rgb(223, 43, 133);
     border-radius: 5px;
 }
